fixes to gap of the subsection

--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -158,7 +158,7 @@ aside p{
     margin-top: 4rem;
     margin-bottom: 2rem;
     display: grid;
-    gap: 1rem;
+    gap: .15rem;
     grid-template-columns: 1fr 1fr 1fr;
 }
 
